<resources>
    <string name="app_name">OpenSpaceApp</string>

    <string name="address_title">Мои адреса</string>
    <string name="scanner_title">Сканер</string>
    <string name="statistic_title">История</string>
    <string name="setting_title">Настройки</string>

    <string name="success_response">success</string>

    <string name="address_add">Добавить адрес</string>

    <string name="apartment_type">Квартира</string>
    <string name="house_type">Дом</string>
    <string name="dacha_type">Дача</string>
    <string name="office_type">Офис</string>

    <string name="default_error">Произошла ошибка! Пожалуйста, попробуйте еще раз.</string>
    <string name="ml_error">Не удалось распознать значения счетчика. Попробуйте снова</string>
    <string name="default_price">%s руб.</string>
    <string name="address">г.%s, %s, д.%s, кв.%s</string>

    <string name="cold_water_type">Холодная вода</string>
    <string name="hot_water_type">Горячая вода</string>
    <string name="gas_type">Газ</string>
    <string name="lightning_type">Электричество</string>

    <!-- DetailAddress -->
    <string name="detail_address_total">Итого: %s руб.</string>
    <string name="detail_address_pay_all">Оплатить все</string>
    <string name="detail_address_indication">Показания:</string>
    <string name="detail_address_scanner">Сканировать</string>
    <string name="detail_address_value_template">%s m³</string>
    <string name="detail_address_value_empty">Нет показаний</string>
    <string name="detail_address_payed">Оплачено</string>

    <!-- SingIn -->
    <string name="sign_in_enter_phone_number">Введите номер телефона</string>
    <string name="sign_in_we_will_send_password">Мы отправим вам временный пароль на этот номер телефона</string>
    <string name="sign_in_title">Снимать показания \n счетчиков - легко!</string>

    <!-- CodeConfirmation -->
    <string name="code_confirmation_title">Подтвердите номер телефона</string>
    <string name="code_confirmation_description">Мы отправили вам код на номер\n%s.</string>

    <!-- AddAddress -->
    <string name="add_address_title_first_time">Заполните необходимую информацию</string>
    <string name="add_address_title_add">Добавить адрес</string>
    <string name="add_address_city_hint">Город</string>
    <string name="add_address_street_hint">Улица</string>
    <string name="add_address_house">Дом</string>
    <string name="add_address_apartment">Квартира</string>
    <string name="add_address_village">Дача</string>
    <string name="add_address_account_hint">Лицевой счёт</string>
    <string name="add_address_office">Офис</string>

    <!-- Scanner -->
    <string name="scanner_description">Поднесите камеру к счетчику и сфотографируйте</string>
    <string name="scanner_fill_information_title">Заполните необходимую информацию</string>
    <string name="scanner_fill_information_address">Адрес</string>

    <string name="statistic_current_month">Текущий месяц</string>
    <string name="statistic_recently_month">Последние месяцы</string>

    <string name="hint_phone">+7 (000) 000 00 00</string>
    <string name="mask_phone">+7 ([000]) [000] [00] [00]</string>
    <string name="sign_in_next">Далее</string>
    <string name="validation_error_empty">Пожалуйста, заполните поле</string>
    <string name="add_address_type_of_building">Тип помещения</string>
    <string name="add_address_add_btn">Добавить</string>
    <string name="add_address_select_type">Пожалуйста, выберите тип адреса</string>
    <string name="add_address_fill_all_fields">Пожалуйста, заполните все поля</string>
    <string name="scanner_check_info_indication">Показания</string>
    <string name="scanner_next">Далее</string>
    <string name="scanner_try_again">Сфотографировать снова</string>

</resources>