<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">


    <item
        android:id="@+id/address"
        android:icon="@drawable/ic_home"
        android:orderInCategory="100"
        android:title="@string/address_title" />

    <item
        android:id="@+id/scanner"
        android:icon="@drawable/ic_scan"
        android:orderInCategory="100"
        android:title="@string/scanner_title" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:orderInCategory="100"
        android:title="@string/history_title" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_setting"
        android:orderInCategory="100"
        android:title="@string/setting_title" />
</menu>