<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/bg_card_item_window"
    android:padding="28dp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Title32Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner_fill_information_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIndicationHint"
        style="@style/TextViewH12Blue113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/scanner_check_info_indication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etIndication"
        style="@style/BaseEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIndicationHint" />

    <Button
        android:id="@+id/btnNext"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/scanner_next"
        app:layout_constraintTop_toBottomOf="@id/etIndication" />

    <Button
        android:id="@+id/btnTryAgain"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/scanner_try_again"
        app:layout_constraintTop_toBottomOf="@id/btnNext" />


</androidx.constraintlayout.widget.ConstraintLayout>