<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        style="@style/TextViewH14Blue113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iconLogoBank"
        app:layout_constraintBottom_toBottomOf="@id/iconLogoBank"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:text="@string/sign_in_title"/>

    <ImageView
        android:id="@+id/iconLogoBank"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:src="@drawable/ic_logo_bank"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/tvPhoneTitle"
        style="@style/Title28Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/sign_in_enter_phone_number"
        android:textColor="@color/first_text_color"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/iconLogoBank" />

    <TextView
        android:id="@+id/tvPhoneDescription"
        style="@style/TextViewH16Blue113Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_we_will_send_password"
        android:textColor="@color/first_text_color"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneTitle" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/BaseEditText.Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_phone"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneDescription"
        tools:text="+7" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnNext"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/sign_in_next"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>