<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_address"
    android:paddingVertical="18dp">

    <TextView
        android:id="@+id/tvAddAddress"
        style="@style/TextViewH14Blue113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/spaceAddAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAddAddress"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/btnApartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnHouse"
        app:layout_constraintTop_toTopOf="@+id/spaceAddAddress"
        android:gravity="center">
        <ImageView
            android:id="@+id/btnApartmentImg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_apartment_outlined" />
        <TextView
            style="@style/TextViewH14Blue113"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_address_apartment"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/btnApartment"
        app:layout_constraintEnd_toStartOf="@id/btnVillage"
        app:layout_constraintTop_toTopOf="@+id/spaceAddAddress"
        android:gravity="center">
        <ImageView
            android:id="@+id/btnHouseImg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_house_outlined"  />
        <TextView
            style="@style/TextViewH14Blue113"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_address_house"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnVillage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/btnHouse"
        app:layout_constraintEnd_toStartOf="@id/btnOffice"
        app:layout_constraintTop_toTopOf="@+id/spaceAddAddress"
        android:gravity="center">
        <ImageView
            android:id="@+id/btnVillageImg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_village_outlined"  />
        <TextView
            style="@style/TextViewH14Blue113"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_address_village"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnOffice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/btnVillage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spaceAddAddress"
        android:gravity="center">
        <ImageView
            android:id="@+id/btnOfficeImg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_office_outlined"  />
        <TextView
            style="@style/TextViewH14Blue113"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_address_office"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>